@@ -1,3 +1,7 @@
+20030117
+ - (djm) Bug #470: Detect strnvis, not strvis in configure.
+    From d_wllms@lanl.gov
+
 20030116
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2003/01/16 03:41:55
@@ -1027,4 +1031,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2573 2003/01/16 04:39:13 djm Exp $
+$Id: ChangeLog,v 1.2574 2003/01/16 23:31:38 djm Exp $
